--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <header>
       <% if user_signed_in? %>
         <li>
-          <%= link_to "Users", user_path %>
+          <%= link_to "Users", about_path %>
         </li>
         <li>
           <%= link_to "Books", books_path %>
