--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,4 +3,8 @@
 <%= link_to user_path(@book.user) do %>
   <%= @book.user.name %>
 <% end %>
+
+<% if @book.user == current_user %>
+  <%= link_to "destroy", book_path(@book), method: :delete %>
+<% end %>
 </div>
