--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
           <%= link_to "Home", user_path(current_user.id) %>
         </li>
         <li>
-          <%= link_to "Users", about_path %>
+          <%= link_to "Users", users_path %>
         </li>
         <li>
           <%= link_to "Books", books_path %>
