--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,7 @@
   <h1>User info</h1>
   <%= @user.name %>
   <%#= image_tag @user.get_profile_image(100,100) %>
+  <%= link_to "プロフィール編集", edit_user_path %>
 </div>
 
 <h1>Books</h1>
