--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,9 @@
   <h1>User info</h1>
   <%= @user.name %>
   <%#= image_tag @user.get_profile_image(100,100) %>
-  <%= link_to "プロフィール編集", edit_user_path %>
+  <% if @user == current_user %>
+    <%= link_to "プロフィール編集", edit_user_path %>
+  <% end %>
 </div>
 
 <h1>Books</h1>
