--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
   <%= @user.name %>
   <%#= image_tag @user.get_profile_image(100,100) %>
   <% if @user == current_user %>
-    <%= link_to "プロフィール編集", edit_user_path %>
+    <%= link_to "プロフィール編集", edit_user_path(@user) %>
   <% end %>
 </div>
 
