--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,9 +8,22 @@
 </div>
 
 <h1>Books</h1>
-<% @books.each do |book| %>
-<div>
-  <%= link_to book.title, book_path(book.id) %>
-  <p>Opinion:<%= book.body %></p>
-</div>
-<% end %>
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Opinion</th>
+      <th colspan="5"></th>
+    </tr>
+  </thead>
+  <tbody>
+  <% @books.each do |book| %>
+    <tr>
+      <td>
+        <%= link_to book.title, book_path(book.id) %>
+      </td>
+      <td><%= book.body %></td>
+    </tr>
+  <% end %>
+  </tbody>
+</table>
