--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,8 @@
 <% @books.each do |book| %>
   <div>
+    <%= link_to user_path(@user.id) do %>
+      <%= image_tag book.user.get_profile_image(100,100) %>
+    <% end %>
     <%= book.title %>
     <%= book.body %>
   </div>
