--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
 <% @users.each do |user| %>
   <div>
+    <%= image_tag user.get_profile_image(100,100) %>
     <%= user.name %>
     <%= link_to "Show", user_path(user.id) %>
   </div>
