--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div>
   <h1>User info</h1>
   <%= @user.name %>
-  <%#= image_tag @user.get_profile_image(100,100) %>
+  <%= image_tag @user.get_profile_image(100,100) %>
   <% if @user == current_user %>
     <%= link_to "プロフィール編集", edit_user_path(@user) %>
   <% end %>
