--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,21 @@
-<% @users.each do |user| %>
-  <div>
-    <%= image_tag user.get_profile_image(100,100) %>
-    <%= user.name %>
-    <%= link_to "Show", user_path(user.id) %>
-  </div>
-<% end %>
+<h1>Users</h1>
+<table>
+  <thead>
+    <tr>
+      <th>image</th>
+      <th>name</th>
+      <th colspan="5"></th>
+    </tr>
+  </thead>
+  <tbody>
+  <% @users.each do |user| %>
+    <tr>
+      <td>
+        <%= image_tag user.get_profile_image(100,100) %>
+      </td>
+      <td><%= user.name %></td>
+      <td><%= link_to "Show", user_path(user.id) %></td>
+    </tr>
+  <% end %>
+  </tbody
+</table>
