--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,10 @@
           <%= link_to "Log out", destroy_user_session_path, method: :delete %>
         </li>
       <% else %>
+      <br>
+        <li>
+          <%= link_to "Home", root_path %>
+        </li>
         <li>
           <%= link_to "About", about_path %>
         </li>
