--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,13 +1,13 @@
 <h1>Book detail</h1>
 <div>
-  <%= link_to user_path(@user.id) do %>
-    <%= image_tag book.user.get_profile_image(100,100) %>
+  <%= link_to user_path(@book.user) do %>
+    <%= image_tag @book.user.get_profile_image(100,100) %>
   <% end %>
-  
+
   <%= link_to user_path(@book.user) do %>
     <%= @book.user.name %>
   <% end %>
-  
+
   <% if @book.user == current_user %>
     <%= link_to "destroy", book_path(@book), method: :delete %>
   <% end %>
