--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,20 @@
-<div>
-  <h1>User info</h1>
-  <%= @user.name %>
-  <%= image_tag @user.get_profile_image(100,100) %>
-  <% if @user == current_user %>
-    <%= link_to "プロフィール編集", edit_user_path(@user) %>
-  <% end %>
-</div>
+<h1>User info</h1>
+<%= image_tag @user.get_profile_image(100,100) %>
+<table>
+  <tbody>
+    <tr>
+      <th>name</th>
+      <th><%= @user.name %></th>
+    </tr>
+    <tr>
+      <th>introduction</th>
+      <th></th>
+    </tr>
+  </tbody>
+</table>
+<% if @user == current_user %>
+  <%= link_to "プロフィール編集", edit_user_path(@user) %>
+<% end %>
 
 <h1>Books</h1>
 <table>
