--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,12 +2,12 @@
 <%= form_with model: @user do |f| %>
   <label for="inputName">Name</label>
   <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前" %>
-  
+
   <label for="inputImage">ProfileImage</label>
   <%= f.file_field :profile_image, placefolder:"プロフィール画像", accept:"image/*" %>
-  
+
   <label for="inputIntroduction">Introduction</label>
-  <%= f.text_area :introduction, autofocus: true, id:"inputIntroduction" %>
-  
+  <%= f.text_field :introduction, autofocus: true, id:"inputIntroduction" %>
+
   <%= f.submit "Update User" %>
 <% end %>
