--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
     </tr>
     <tr>
       <th>introduction</th>
-      <th></th>
+      <th><%= @user.introduction %></th>
     </tr>
   </tbody>
 </table>
