--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,9 +1,28 @@
-<% @books.each do |book| %>
-  <div>
-    <%= link_to user_path(book.user.id) do %>
-      <%= image_tag book.user.get_profile_image(100,100) %>
-    <% end %>
-    <%= book.title %>
-    <%= book.body %>
+<div class = "container-fluid">
+  <div class = "row">
+    <div class = "col-lg-10 offset-lg-2">
+      <table class = "table">
+        <thead>
+          <tr>
+            <th>Image</th>
+            <th>Title</th>
+            <th>Opinion</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @books.each do |book| %>
+            <tr>
+              <td>
+                <%= link_to user_path(book.user.id) do %>
+                  <%= image_tag book.user.get_profile_image(100,100) %>
+                <% end %>
+              </td>
+              <td><%= book.title %></td>
+              <td><%= book.body %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
   </div>
-<% end %>
+</div>
