--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,38 +1,47 @@
-<h1>User info</h1>
-<%= image_tag @user.get_profile_image(100,100) %>
-<table>
-  <tbody>
-    <tr>
-      <th>name</th>
-      <th><%= @user.name %></th>
-    </tr>
-    <tr>
-      <th>introduction</th>
-      <th><%= @user.introduction %></th>
-    </tr>
-  </tbody>
-</table>
-<% if @user == current_user %>
-  <%= link_to "プロフィール編集", edit_user_path(@user) %>
-<% end %>
+<div class = "container">
+  <div class = "row">
 
-<h1>Books</h1>
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Opinion</th>
-      <th colspan="5"></th>
-    </tr>
-  </thead>
-  <tbody>
-  <% @books.each do |book| %>
-    <tr>
-      <td>
-        <%= link_to book.title, book_path(book.id) %>
-      </td>
-      <td><%= book.body %></td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+    <div class = "col-lg-3">
+      <h1>User info</h1>
+      <%= image_tag @user.get_profile_image(100,100) %>
+      <table class = "table">
+        <tbody>
+          <tr>
+            <th>name</th>
+            <th><%= @user.name %></th>
+          </tr>
+          <tr>
+            <th>introduction</th>
+            <th><%= @user.introduction %></th>
+          </tr>
+        </tbody>
+      </table>
+      <% if @user == current_user %>
+        <%= link_to "プロフィール編集", edit_user_path(@user) %>
+      <% end %>
+    </div>
+
+    <div class = "col-lg-8 offset-1">
+      <h1>Books</h1>
+      <table class = "table">
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th colspan="5"></th>
+          </tr>
+        </thead>
+        <tbody>
+        <% @books.each do |book| %>
+          <tr>
+            <td>
+              <%= link_to book.title, book_path(book.id) %>
+            </td>
+            <td><%= book.body %></td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
