--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -8,6 +8,12 @@
     <%= @book.user.name %>
   <% end %>
 
+  <%= link_to book_path(@book) do %>
+    <%= @book.title %>
+  <% end %>
+
+  <%= @book.body %>
+
   <% if @book.user == current_user %>
     <%= link_to "destroy", book_path(@book), method: :delete %>
   <% end %>
