[Add] book詳細に編集へのリンク

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -15,6 +15,7 @@
   <%= @book.body %>
 
   <% if @book.user == current_user %>
-    <%= link_to "destroy", book_path(@book), method: :delete %>
+    <%= link_to "Edit", edit_book_path(@book) %>
+    <%= link_to "Destroy", book_path(@book), method: :delete %>
   <% end %>
 </div>
