--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,9 @@
 <div class = "container-fluid">
   <div class = "row">
+    <div>
+      <%= render 'side', user: @user, book: @book %>
+    </div>
+
     <div class = "col-lg-10 offset-lg-2">
       <table class = "table">
         <thead>
