--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,12 @@
+<% if @book.errors.any? %>
+  <h1><%= @book.errors.count %>errors prohibited this obj from being saved:</h1>
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <div class = "container-fluid">
   <div class = "row">
     <div>
