[Update] top画面のlinkをボタンに

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -20,11 +20,11 @@
       </p>
 
       <div class="btn-wrapper col-10 mx-auto">
-        <div class="row">
-          <%= link_to "Log in", new_user_session_path %>
+        <div class="row btn btn-info btn-block">
+          <%= link_to "Log in", new_user_session_path, style: "color: #fff;" %>
         </div>
-        <div class="row">
-          <%= link_to "Sign in", new_user_registration_path %>
+        <div class="row btn btn-success btn-block">
+          <%= link_to "Sign in", new_user_registration_path, style: "color: #fff;" %>
         </div>
       </div>
 
