[Update] 全体のレイアウトをBootstrapで統一

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,14 +7,15 @@
   </ul>
 <% end %>
 
-<div class = "container-fluid">
-  <div class = "row">
-    <div>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-3">
       <%= render 'side', user: @user, book: @book %>
     </div>
 
-    <div class = "col-lg-10 offset-lg-2">
-      <table class = "table">
+    <div class="col-lg-8 offset-1">
+      <h1>Books</h1>
+      <table class="table">
         <thead>
           <tr>
             <th>Image</th>
