--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,23 +1,31 @@
-<%= render 'side', user: @user, book: @book_new %>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-3">
+      <%= render 'side', user: @user, book: @book_new %>
+    </div>
 
-<h1>Book detail</h1>
-<div>
-  <%= link_to user_path(@book.user) do %>
-    <%= image_tag @book.user.get_profile_image(100,100) %>
-  <% end %>
+    <div class="col-lg-8 offset-1">
+      <h1>Book detail</h1>
+      <div>
+        <%= link_to user_path(@book.user) do %>
+          <%= image_tag @book.user.get_profile_image(100,100) %>
+        <% end %>
 
-  <%= link_to user_path(@book.user) do %>
-    <%= @book.user.name %>
-  <% end %>
+        <%= link_to user_path(@book.user) do %>
+          <%= @book.user.name %>
+        <% end %>
 
-  <%= link_to book_path(@book) do %>
-    <%= @book.title %>
-  <% end %>
+        <%= link_to book_path(@book) do %>
+          <%= @book.title %>
+        <% end %>
 
-  <%= @book.body %>
+        <%= @book.body %>
 
-  <% if @book.user == current_user %>
-    <%= link_to "Edit", edit_book_path(@book) %>
-    <%= link_to "Destroy", book_path(@book), method: :delete %>
-  <% end %>
+        <% if @book.user == current_user %>
+          <%= link_to "Edit", edit_book_path(@book) %>
+          <%= link_to "Destroy", book_path(@book), method: :delete %>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
