--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,10 +1,18 @@
-<h1>Editing Book</h1>
-<%= form_with model: @book do |f| %>
-  <label for = "inputTitle">Title</label>
-  <%= f.text_field :title, autofocus: true, id:"inputTitle" %>
-
-  <label for = "inputBody">Opinion</label>
-  <%= f.text_area :body, autofocus: true, id:"inputBody" %>
-
-  <%= f.submit "Update Book" %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h1>Editing Book</h1>
+      <%= form_with model: @book do |f| %>
+        <label for = "inputTitle">Title</label>
+        <br>
+        <%= f.text_field :title, autofocus: true, id:"inputTitle" %>
+        <br>
+        <label for = "inputBody">Opinion</label>
+        <br>
+        <%= f.text_area :body, autofocus: true, id:"inputBody" %>
+        <br>
+        <%= f.submit "Update Book" %>
+      <% end %>
+    </div>
+  </div>
+</div>
