--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,23 +1,31 @@
-<h1>User info</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h1>User info</h1>
+      <% if @user.errors.any? %>
+        <h1><%= @user.errors.count %>error prohibited this obj from being saved:</h1>
+        <ul>
+          <% @user.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      <% end %>
 
-<% if @user.errors.any? %>
-  <h1><%= @user.errors.count %>error prohibited this obj from being saved:</h1>
-  <ul>
-    <% @user.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
-
-<%= form_with model: @user do |f| %>
-  <label for="inputName">Name</label>
-  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前" %>
-
-  <label for="inputImage">ProfileImage</label>
-  <%= f.file_field :profile_image, placefolder:"プロフィール画像", accept:"image/*" %>
-
-  <label for="inputIntroduction">Introduction</label>
-  <%= f.text_field :introduction, autofocus: true, id:"inputIntroduction" %>
-
-  <%= f.submit "Update User" %>
-<% end %>
+      <%= form_with model: @user do |f| %>
+        <label for="inputName">Name</label>
+        <br>
+        <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前" %>
+        <br>
+        <label for="inputImage">ProfileImage</label>
+        <br>
+        <%= f.file_field :profile_image, placefolder:"プロフィール画像", accept:"image/*" %>
+        <br>
+        <label for="inputIntroduction">Introduction</label>
+        <br>
+        <%= f.text_field :introduction, autofocus: true, id:"inputIntroduction" %>
+        <br>
+        <%= f.submit "Update User" %>
+      <% end %>
+    </div>
+  </div>
+</div>
