--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,23 +1,31 @@
-<%= render 'books/side', user: @user, book: @book %>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-3">
+      <%= render 'books/side', user: @user, book: @book %>
+    </div>
 
-<h1>Users</h1>
-<table>
-  <thead>
-    <tr>
-      <th>image</th>
-      <th>name</th>
-      <th colspan="5"></th>
-    </tr>
-  </thead>
-  <tbody>
-  <% @users.each do |user| %>
-    <tr>
-      <td>
-        <%= image_tag user.get_profile_image(100,100) %>
-      </td>
-      <td><%= user.name %></td>
-      <td><%= link_to "Show", user_path(user.id) %></td>
-    </tr>
-  <% end %>
-  </tbody
-</table>
+    <div class="col-lg-8 offset-1">
+      <h1>Users</h1>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>image</th>
+            <th>name</th>
+            <th colspan="5"></th>
+          </tr>
+        </thead>
+        <tbody>
+        <% @users.each do |user| %>
+          <tr>
+            <td>
+              <%= image_tag user.get_profile_image(100,100) %>
+            </td>
+            <td><%= user.name %></td>
+            <td><%= link_to "Show", user_path(user.id) %></td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
