--- a/app/views/books/_side.html.erb
+++ b/app/views/books/_side.html.erb
@@ -13,15 +13,27 @@
   </tbody>
 </table>
 <% if user == current_user %>
-  <%= link_to "プロフィール編集", edit_user_path(user) %>
+  <div class="row">
+    <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
+      <i class="fa-solid fa-user-gear"></i>
+    <% end %>
+  </div>
 <% end %>
 
 
 <h1>New book</h1>
-<%= form_with model: book do |f| %>
-  <h3>Title</h3>
-  <%= f.text_field :title %>
-  <h3>Opinion</h3>
-  <%= f.text_area :body %>
-  <%= f.submit "投稿" %>
-<% end %>
+<div>
+  <%= form_with model: book do |f| %>
+    <div>
+      <label for="book_title">Title</label>
+      <%= f.text_field :title, class: "form-control" %>
+    </div>
+    <div>
+      <label for="book_body">Opinion</label>
+      <%= f.text_area :body, class: "form-control" %>
+    </div>
+    <div>
+      <%= f.submit "Create Book", class: "btn btn-success" %>
+    </div>
+  <% end %>
+</div>
