--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -3,16 +3,21 @@
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h1>Editing Book</h1>
       <%= form_with model: @book do |f| %>
-        <label for = "inputTitle">Title</label>
-        <br>
-        <%= f.text_field :title, autofocus: true, id:"inputTitle" %>
-        <br>
-        <label for = "inputBody">Opinion</label>
-        <br>
-        <%= f.text_area :body, autofocus: true, id:"inputBody" %>
-        <br>
-        <%= f.submit "Update Book" %>
+        <div>
+          <label for="inputTitle">Title</label>
+          <%= f.text_field :title, autofocus: true, id:"inputTitle", class: "form-control" %>
+        </div>
+        <div>
+          <label for="inputBody">Opinion</label>
+          <%= f.text_area :body, autofocus: true, id:"inputBody", class: "form-control" %>
+        </div>
+        <div class="row">
+        <%= f.submit "Update Book", class: "btn btn-success" %>
+        </div>
       <% end %>
+      <%= link_to "Show", book_path(@book) %>
+      |
+      <%= link_to "Back", books_path %>
     </div>
   </div>
 </div>
