--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,50 +25,50 @@
             <ul class="navbar-nav ml-auto">
               <% if user_signed_in? %>
               <li>
-                <%= link_to user_path(current_user.id) do %>
+                <%= link_to user_path(current_user.id), class: "text-light" do %>
                   <i class="fa-solid fa-house"></i>
                   Home
                 <% end %>
               </li>
               <li>
-                <%= link_to users_path do %>
+                <%= link_to users_path, class: "text-light" do %>
                   <i class="fa-solid fa-users"></i>
                   Users
                 <% end %>
               </li>
               <li>
-                <%= link_to books_path do %>
+                <%= link_to books_path, class: "text-light" do %>
                   <i class="fa-solid fa-book-open"></i>
                   Books
                 <% end %>
               </li>
               <li>
-                <%= link_to destroy_user_session_path, method: :delete do %>
+                <%= link_to destroy_user_session_path, method: :delete, class: "text-light" do %>
                   <i class="fa-solid fa-right-from-bracket"></i>
                   Log out
                 <% end %>
               </li>
               <% else %>
               <li>
-                <%= link_to root_path do %>
+                <%= link_to root_path, class: "text-light" do %>
                   <i class="fa-solid fa-house"></i>
                   Home
                 <% end %>
               </li>
               <li>
-                <%= link_to about_path do %>
+                <%= link_to about_path, class: "text-light" do %>
                   <i class="fa-solid fa-link"></i>
                   About
                 <% end %>
               </li>
               <li>
-                <%= link_to new_user_registration_path do %>
+                <%= link_to new_user_registration_path, class: "text-light" do %>
                   <i class="fa-solid fa-user-plus"></i>
                   Sign up
                 <% end %>
               </li>
               <li>
-                <%= link_to new_user_session_path do %>
+                <%= link_to new_user_session_path, class: "text-light" do %>
                   <i class="fa-solid fa-right-to-bracket"></i>
                   Log in
                 <% end %>
