[Fix] RSpecテストをもとに修正

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -28,7 +28,7 @@
           <%= link_to "Log in", new_user_session_path, style: "color: #fff;" %>
         </div>
         <div class="row btn btn-success btn-block">
-          <%= link_to "Sign in", new_user_registration_path, style: "color: #fff;" %>
+          <%= link_to "Sign up", new_user_registration_path, style: "color: #fff;" %>
         </div>
       </div>
 
