--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,11 +9,11 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-lg-3">
+    <div class="col-md-3">
       <%= render 'side', user: @user, book: @book %>
     </div>
 
-    <div class="col-lg-8 offset-1">
+    <div class="col-md-8 offset-md-1">
       <h1>Books</h1>
       <table class="table">
         <thead>
