--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,11 +5,11 @@
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-lg-3">
+    <div class="col-md-3">
       <%= render 'side', user: @user, book: @book_new %>
     </div>
 
-    <div class="col-lg-8 offset-1">
+    <div class="col-md-8 offset-md-1">
       <h1>Book detail</h1>
       <table class="table">
         <tbody>
