--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
-    <div class="col-lg-3">
+    <div class="col-md-3">
       <%= render 'books/side', user: @user, book: @book %>
     </div>
 
-    <div class="col-lg-8 offset-1">
+    <div class="col-md-8 offset-md-1">
       <h1>Users</h1>
       <table class="table">
         <thead>
