--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,23 +5,29 @@
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-lg-3">
+    <div class="col-md-3">
       <%= render 'books/side', user: @user, book: @book %>
     </div>
 
-    <div class="col-lg-8 offset-1">
+    <div class="col-md-8 offset-md-1">
       <h1>Books</h1>
       <table class="table">
         <thead>
           <tr>
+            <th></th>
             <th>Title</th>
             <th>Opinion</th>
-            <th colspan="5"></th>
+            <th colspan="3"></th>
           </tr>
         </thead>
         <tbody>
         <% @books.each do |book| %>
           <tr>
+            <td>
+              <%= link_to user_path(book.user.id) do %>
+                <%= image_tag book.user.get_profile_image(100,100) %>
+              <% end %>
+            </td>
             <td>
               <%= link_to book.title, book_path(book.id) %>
             </td>
